corrected misalignment in the onboarding page

--- a/src/app/(public)/(onboarding)/page.module.css
+++ b/src/app/(public)/(onboarding)/page.module.css
@@ -90,7 +90,6 @@
 /* Height responsive adjustments */
 @media screen and (max-height: 850px) {
     .container {
-        justify-content: flex-start;
         padding-top: 30px;
         padding-bottom: 30px;
     }
